fix: Add gap between score box and name on both sides
- Adjust #p2Wrapper from 1210px to 1226px
- Both P1 and P2 now have visible gap between score box and name

--- a/_overlays/css/style.scss
+++ b/_overlays/css/style.scss
@@ -47,7 +47,7 @@ body {
   }
 
   #p2Wrapper {
-    left: 1210px;
+    left: 1226px;
   }
 
   .scores {
